<resources>
    <string name="app_name">Sales force</string>
    <string name="error_server_unavailable">Server unavailable</string>
    <string name="error_service_unavailable">Service unavailable</string>
    <string name="error_no_data_synced">You haven\'t synced any data</string>
    <string name="error_no_order_created">You haven\'t created any orders</string>
    <!-- Login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <!-- End Login-->

    <!--Main Map-->
    <string name="title_activity_main">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_customers">Customers</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_products">Products</string>
    <string name="action_logout">Logout</string>
    <string name="data_sync">Data Sync</string>
    <string-array name="companies">
        <item>Company 1</item>
        <item>Company 2</item>
        <item>Company 3</item>
    </string-array>
    <!-- End Main Map-->

    <!-- Customers -->
    <string name="title_activity_customers">Customers</string>
    <string name="search_title">Search...</string>
    <!-- End customers-->

    <!-- Customer -->
    <string name="title_activity_customer">Customer</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_contact_person">Contact Person</string>
    <string name="prompt_telephone_number">Telephone number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_identification">Identification</string>
    <string name="action_done">Done</string>
    <string name="tax">Tax</string>
    <string name="locality">Locality</string>
    <string-array name="identifications">
        <item>V</item>
        <item>J</item>
        <item>P</item>
        <item>G</item>
        <item>E</item>
    </string-array>
    <string name="customer_saved">Customer saved</string>
    <string name="error_customer_exists">This customer already exists</string>
    <string name="error_identification">The identification is incorrect</string>
    <string name="error_address">The address cannot be empty</string>
    <string name="error_phone">The phone is incorrect</string>
    <string name="error_name">The name cannot be empty</string>
    <string name="action_filter">Filters</string>
    <string name="action_change_filter_synced">Filter by synced</string>
    <string name="action_change_filter_notsynced">Filter by not synced</string>
    <string name="action_change_filter_all">Filter by all</string>
    <!-- End customer -->

    <!-- Products -->
    <string name="title_activity_products">Products</string>
    <string name="action_change_view">Change view</string>
    <!-- End products -->

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="download_customer">Download customer</string>
    <string name="download_locality">Download locality</string>
    <string name="download_tax_types">Download tax types</string>
    <string name="download_products">Download products</string>
    <string name="notification_text_customer">Downloading Customers...</string>
    <string name="notification_text_product">Downloading Products...</string>
    <string name="notification_text_localities">Downloading Localities...</string>
    <string name="notification_text_tax_types">Downloading types of tax...</string>
    <string name="notification_customer_downloaded">Your customer data was downloaded...</string>
    <string name="notification_product_downloaded">Your product data was downloaded...</string>
    <string name="notification_locality_downloaded">Your locality data was downloaded...</string>
    <string name="notification_locality_tax_types">Your types of tax were downloaded...</string>
    <string name="status_connection">Status connection</string>
    <string name="check_connection">Check your status connection</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="error_service_running">Your service is running</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="content_sync">All the data will be deleted. Would you like continuing?</string>
    <string name="no">No</string>
    <!-- End Settings -->

    <!-- Order -->
    <string name="title_activity_order">@string/nav_orders</string>
    <string name="message_delete_order">Would you like deleting this order?</string>
    <string name="order_synced">This order is synced</string>
    <string name="order_deleted">This order has been deleted</string>
    <string name="delete">Delete</string>
    <string name="message_delete_product">Would you like deleting this product?</string>
    <string name="change_quantiy">Change quantity</string>
    <!-- End Order -->

</resources>
