<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pskloud.osm.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Switch
            android:id="@+id/sv_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Switch
            android:id="@+id/sv_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:layout_below="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_marginTop="@dimen/small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_connection"
            android:id="@+id/textView2"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sv_connection"
            android:layout_alignBottom="@+id/sv_connection"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_customer"
            android:id="@+id/textView4"
            android:textSize="16sp"
            android:layout_alignBottom="@+id/sv_customer"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/sv_customer"
            android:gravity="center_vertical"
            android:layout_alignEnd="@+id/textView2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/sv_connection"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_marginTop="@dimen/small" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
